--- a/TRA.HTML
+++ b/TRA.HTML
@@ -72,85 +72,153 @@
         </div>
       </div>
     </header>
-
-    <section id="home">
-      <div class="container">
-        <div class="topic-container">
-          <div class="topic-4">
-            <div class="element-4">
-              <h1 style="font-size: 32px; font-weight: 600">
-                Hơi thở hiện đại trong từng tách cà phê
-              </h1>
-              <h2 style="font-size: 18px; font-weight: 600">
-                Sự khởi đầu của S-Coffee
-              </h2>
-              <p>
-                S-Coffee được thành lập bởi một nhóm coffeeholic - cụm từ đại
-                diện cho phần đông những người chọn cà phê là một phần của cuộc
-                sống thường nhật.
-              </p>
-              <p>
-                Chúng tôi có mọi thứ mình cần cho một thương hiệu cafe tại Sài
-                Gòn. Kiến thức, chuyên môn và một cộng đồng những người trẻ luôn
-                tìm kiếm cái mới. Chúng tôi tin rằng đây là thời điểm tốt nhất
-                để du nhập một làn sóng cà phê mang lại trải nghiệm dựa trên sự
-                phát triển không ngừng của đô thị.
-              </p>
-              <p>
-                S-Coffee tin cà phê là điều giữ cho mọi thứ cân bằng. Trong nhịp
-                sống đầy biến chuyển, trải nghiệm luôn là sự kết hợp giữa tận
-                hưởng và khám phá. Và không gì tốt hơn việc có một cốc cà phê
-                tuyệt vời bên cạnh đồng hành.
-              </p>
-              <img
-                src="https://wegocoffee.com/img/our-story/coffee-illus.png"
-                alt=""
-                width="384px"
-                style="margin-top: 50px"
-              />
-            </div>
-            <div class="element-4-2">
-              <img
-                src="https://wegocoffee.com/img/our-story/begin.jpg"
-                alt=""
-              />
-            </div>
-          </div>
+    <section style="color: rgb(83, 56, 44)">
+      <div class="main-order">
+        <div class="container">
+          <ul class="menu">
+            <a href="FREEZE.HTML#section1"><li>FREEZE</li></a>
+            <a href="NGUYENBAN.HTML#section2"><li>NGUYÊN BẢN</li></a>
+            <a href="DACBIET.HTML#section3"><li>ĐẶC BIỆT</li></a>
+            <a href="CAPHE.HTML#section4"><li>CÀ PHÊ</li></a>
+            <a href="TRA.HTML#section5"><li>TRÀ</li></a>
+            <a href="KHAC.HTML#section6"><li>KHÁC</li></a>
+          </ul>
         </div>
-      </div>
-    </section>
-    <section id="home">
-      <div class="container">
-        <div class="topic-container">
-          <div class="topic-4">
-            <div class="element-4">
-              <h2 style="font-size: 18px; font-weight: 600">
-                3 giá trị tạo nên WeGo
-              </h2>
-              <h5 style="font-size: 12px; font-weight: 700">TRẢI NGHIỆM</h5>
-              <p>
-                Chúng tôi tin rằng ngoài hương vị, sự quen thuộc là thứ mọi
-                người tìm kiếm trong mỗi cốc cà phê. Đó là độ ổn định về chất
-                lượng; độ cân bằng của hương vị; và mùi thơm đặc trưng của từng
-                loại hạt.
-              </p>
-              <h5 style="font-size: 12px; font-weight: 700">THÀNH THỊ</h5>
-              <p>
-                WeGo theo đuổi việc trở thành một phần của lối sống đô thị.
-                Hướng đến sự tiện lợi và linh hoạt, WeGo cung cấp một không gian
-                tối ưu hoá cho công việc và những buổi gặp gỡ bạn bè.
-              </p>
-              <h5 style="font-size: 12px; font-weight: 700">THIẾT KẾ</h5>
-              <p>
-                Ở WeGo, tiêu chuẩn được chúng tôi đặt lên hàng đầu. Điều đó hiện
-                diện trong mọi thứ: từ hình ảnh, sản phẩm cho đến không gian
-                quán. Một nét giao thoa giữa sự hiện đại và chủ nghĩa tối giản
-                (minimalism).
-              </p>
-            </div>
-            <div class="element-4-2">
-              <div></div>
-              <img src="https://wegocoffee.com/img/our-story/mix.jpg" alt="" />
+        <div class="container">
+          <div class="coffee-order" id="section5">
+            <h1 style="font-size: 22px">TRÀ</h1>
+            <span
+              >Hương vị tự nhiên, thơm ngon của Trà Việt với phong cách hiện đại
+              tại Highlands Coffee sẽ giúp bạn gợi mở vị giác của bản thân và
+              tận hưởng một cảm giác thật khoan khoái, tươi mới.</span
+            >
+            <div class="slideProduct">
+              <div class="conver-slide-button">
+                <button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-caret-left-fill"
+                    viewBox="0 0 16 16"
+                    id="prev-5"
+                    class="nav-btn"
+                  >
+                    <path
+                      d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"
+                    />
+                  </svg>
+                </button>
+                <button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-caret-right-fill"
+                    viewBox="0 0 16 16"
+                    id="next-5"
+                    class="nav-btn"
+                  >
+                    <path
+                      d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
+                    />
+                  </svg>
+                </button>
+              </div>
+              <div class="product-list">
+                <div class="slider-container">
+                  <div class="slider-wrapper">
+                    <div class="slider-5">
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/06_2023/thumbs/270_crop_HLC_New_logo_5.1_Products__TRA_TACH_VAI.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ THẠCH VẢI</h3>
+                            <p>Giá: <b>45,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/06_2023/thumbs/270_crop_HLC_New_logo_5.1_Products__TRA_THANH_DAO-09.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ THẠCH ĐÀO</h3>
+                            <p>Giá: <b>45,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/06_2023/thumbs/270_crop_HLC_New_logo_5.1_Products__TRA_THANH_DAO-08.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ THANH ĐÀO</h3>
+                            <p>Giá: <b>45,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/11_2023/thumbs/270_crop_3P_COMBO_Tea_Berry.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ QUẢ MỌNG ANH ĐÀO</h3>
+                            <p>Giá: <b>45,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/06_2023/thumbs/270_crop_HLC_New_logo_5.1_Products__TRA_SEN_VANG_CU_NANG.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ SEN VÀNG (CỦ NĂNG)</h3>
+                            <p>Giá: <b>89,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                      <div class="product">
+                        <div class="slide-5">
+                          <img
+                            src="https://www.highlandscoffee.com.vn/vnt_upload/product/06_2023/thumbs/270_crop_HLC_New_logo_5.1_Products__TSV.jpg"
+                            alt=""
+                          />
+                        </div>
+                        <div class="name-price">
+                          <center>
+                            <h3>TRÀ SEN VÀNG (SEN)</h3>
+                            <p>Giá: <b>89,000 VNĐ</b></p>
+                          </center>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -233,48 +301,6 @@
               <a href=""><li>Thương hiệu</li></a>
               <a href=""><li>Công việc</li></a>
             </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="item-container">
-          <div class="hotline">
-            <p><b>Hotline chăm sóc khách hàng:</b> 012 3456 789</p>
-            <p>
-              <b>Địa chỉ văn phòng:</b> Ionia 0175 Sumaria, Quận Trost, Thành
-              phố Susan
-            </p>
-            <p><b>Email:</b> Susan0175Abe@gmail.com</p>
-          </div>
-          <div>
-            <img
-              src="https://wegocoffee.com/img/certification.png"
-              alt=""
-              width="100px"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="item-container-2">
-            <div class="hotline">
-              <p>
-                © 2024 - Bản quyền của Công ty Cổ Phần Coffee Shop - Susan.com
-              </p>
-              <div>
-                <p>
-                  Giấy chứng nhận đăng ký kinh doanh số 0123456789 do Sở Kế
-                  hoạch và Đầu tư Thành phố Susan cấp ngày 21/08/2050
-                </p>
-              </div>
-            </div>
-            <div class="hotline">
-              <p>Điều khoản sử dụng</p>
-            </div>
-            <div class="hotline">
-              <p>Chính sách bảo mật</p>
-            </div>
           </div>
         </div>
       </div>
