--- a/dangKyGoi.html
+++ b/dangKyGoi.html
@@ -17,6 +17,8 @@
             <li><a href="webOrder.html">Menu </a></li>
             <li><a href="dangKyGoi.html ">Đăng Ký Gói</a></li>
             <li><a href="thuongHieu.html">Thương Hiệu</a></li>
+            <li><a href="login.html">Đăng Nhập</a></li>
+            <li><a href="reg.html">Đăng Ký</a></li>
           </ul>
         </nav>
       </div>
@@ -29,23 +31,25 @@
             </p>
           </div>
           <div class="btn">
-            <span>
-              Đăng ký
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-arrow-right"
-                viewBox="0 0 16 16"
-                style="margin-left: 10px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
-                />
-              </svg>
-            </span>
+            <a href="dangKyGoi.html">
+              <span>
+                Đăng ký
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                  style="margin-left: 10px"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </span>
+            </a>
           </div>
           <div class="convert">
             <div class="controls">
@@ -86,9 +90,14 @@
     <section id="menu" style="padding: 100px 0 100px 0">
       <div style="margin: 50px 50px 100px 50px">
         <center>
-          <h4 style="font-size: 26px; font-weight: 600">
-            Đăng ký Gói Coffee Shop Subscribe
-          </h4>
+          <h5>TẠI SAO LỰA CHỌN CHÚNG TÔI?</h5>
+          <h2>Cà phê là bước khởi đầu không thể thiếu cho một ngày mới</h2>
+          <div class="dk-1">
+            Bỏ qua hết mọi rắc rối của việc lựa chọn hương vị, tốn kém thời gian
+            chờ đợi giao hàng hay bí bách kẹt xe không thể đến được quán. Hãy
+            lựa chọn Wego Subscribe - Vì bạn xứng đáng được hưởng thụ một ly cà
+            phê hoàn hảo
+          </div>
         </center>
       </div>
       <div class="reg-pagkage">
@@ -120,6 +129,59 @@
           </p>
         </div>
       </div>
+      <div style="margin: 150px 50px 100px 50px">
+        <center>
+          <h5>CÁCH THỨC ĐĂNG KÝ WEGO SUBSCRIBE</h5>
+          <h2>Cá nhân hóa hương vị cà phê theo chất riêng của bạn</h2>
+        </center>
+      </div>
+      <div class="reg-pagkage">
+        <div class="menu-item" style="margin-bottom: 2rem">
+          <img
+            src="https://wegocoffee.com/img/subscriptions/step-1.svg"
+            alt=""
+          />
+          <h3>Bước 1</h3>
+          <hr />
+          <h3>Lựa chọn gói Wego Subscribe</h3>
+          <p>
+            Bạn thích hương vị truyền thống hay pha lẫn một chút hiện đại? Muốn
+            nhâm nhi ly cà phê buổi sáng hay tỉnh táo vào tầm chiều? Hãy lựa
+            chọn theo sở thích riêng của bạn. Lưu ý: Bạn có thể điều chỉnh mỗi
+            ngày theo lịch trình cá nhân.
+          </p>
+        </div>
+        <div class="menu-item">
+          <img
+            src="https://wegocoffee.com/img/subscriptions/step-2.svg"
+            alt=""
+          />
+          <h3>Bước 2</h3>
+          <hr />
+          <h3>Thanh toán đơn hàng</h3>
+          <p>
+            Xác nhận đơn hàng, điền thông tin đầy đủ để chúng tôi có thể hỗ trợ
+            bạn một cách tốt nhất. Sau đó lựa chọn hình thức thanh toán và làm
+            theo hướng dẫn. Bạn sẽ nhận được email xác nhận sau khi hoàn tất
+            bước thanh toán này.
+          </p>
+        </div>
+        <div class="menu-item">
+          <img
+            src="https://wegocoffee.com/img/subscriptions/step-3.svg"
+            alt=""
+          />
+          <h3>Bước 3</h3>
+          <hr />
+          <h3>Xác nhận thời gian và giao hàng</h3>
+          <p>
+            Chúng tôi sẽ liên lạc với bạn qua Zalo để xác nhận chính xác thời
+            gian giao hàng vào mỗi ngày. Trong trường hợp bạn muốn thay đổi lịch
+            trình hãy liên lạc với chúng tôi sớm nhất để có thể được hỗ trợ tốt.
+          </p>
+        </div>
+      </div>
+
       <div class="container" style="margin-top: 10px">
         <div class="btn" style="width: 300px; color: #fff">
           <span>
@@ -142,6 +204,7 @@
         </div>
       </div>
     </section>
+
     <section class="complex-background-2">
       <div class="container">
         <div class="complex-topic-2">
