--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
           </div>
         </div>
         <nav>
-          <ul class="menu">
+          <ul class="menu-heading">
             <li><a href="index.html">Trang Chủ</a></li>
             <li><a href="webOrder.html">Menu </a></li>
             <li><a href="dangKyGoi.html ">Đăng Ký Gói</a></li>
             <li><a href="thuongHieu.html">Thương Hiệu</a></li>
+            <li><a href="login.html">Đăng Nhập</a></li>
+            <li><a href="reg.html">Đăng Ký</a></li>
           </ul>
         </nav>
       </div>
@@ -41,23 +43,25 @@
             </p>
           </div>
           <div class="btn">
-            <span>
-              Đăng ký
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-arrow-right"
-                viewBox="0 0 16 16"
-                style="margin-left: 10px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
-                />
-              </svg>
-            </span>
+            <a href="dangKyGoi.html">
+              <span>
+                Đăng ký
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                  style="margin-left: 10px"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </span>
+            </a>
           </div>
           <div class="convert">
             <div class="controls">
