--- a/webOrder.html
+++ b/webOrder.html
@@ -17,6 +17,8 @@
             <li><a href="webOrder.html">Menu </a></li>
             <li><a href="dangKyGoi.html ">Đăng Ký Gói</a></li>
             <li><a href="thuongHieu.html">Thương Hiệu</a></li>
+            <li><a href="login.html">Đăng Nhập</a></li>
+            <li><a href="reg.html">Đăng Ký</a></li>
           </ul>
         </nav>
       </div>
@@ -29,23 +31,25 @@
             </p>
           </div>
           <div class="btn">
-            <span>
-              Đăng ký
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-arrow-right"
-                viewBox="0 0 16 16"
-                style="margin-left: 10px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
-                />
-              </svg>
-            </span>
+            <a href="dangKyGoi.html">
+              <span>
+                Đăng ký
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                  style="margin-left: 10px"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </span>
+            </a>
           </div>
           <div class="convert">
             <div class="controls">
@@ -68,8 +72,18 @@
         </div>
       </div>
     </header>
-    <section style="color: rgb(83, 56, 44)">
+    <section style="color: rgb(83, 56, 44);">
       <div class="main-order">
+        <div class="container">
+          <ul class="menu">
+            <a href="FREEZE.HTML#section1"><li>FREEZE</li></a>
+            <a href="NGUYENBAN.HTML#section2"><li>NGUYÊN BẢN</li></a>
+            <a href="DACBIET.HTML#section3"><li>ĐẶC BIỆT</li></a>
+            <a href="CAPHE.HTML#section4"><li>CÀ PHÊ</li></a>
+            <a href="TRA.HTML#section5"><li>TRÀ</li></a>
+            <a href="KHAC.HTML#section6"><li>KHÁC</li></a>
+          </ul>
+        </div>
         <div class="container">
           <div class="coffee-order">
             <h1 style="font-size: 45px">FREEZE</h1>
